prototype: initialize ui